# bydelsfakta-databricks

./: .gitignore  LICENSE  Makefile  README.md  databricks.yml  pyproject.toml  workspace-hosts.local.yml.example
.github/workflows/: deploy.yml  pr.yml
resources/: alder_distribusjon_status_job.yml  befolkningsutvkl_forv_utvkl_job.yml  boligpriser_job.yml  botid_ikke_vestlige_job.yml  bygningstyper_job.yml  eieform_job.yml  fattige_barnehusholdninger_job.yml  flyttehyppighet_totalt_job.yml  folkemengde_job.yml  husholdning_med_barn_job.yml  husholdningstyper_job.yml  innvandrer_befolkning_job.yml  innvandring_under16_job.yml  kommunale_boliger_job.yml  landbakgrunn_innvandringsgrupper_job.yml  levekaar_dodsrate_job.yml  levekar_ikke_sysselsatte_job.yml  levekar_lav_utdanning_job.yml  levekar_redusert_funksjonsevne_job.yml  levekar_totalt_job.yml  levekar_trangbodde_job.yml  median_totalpris_job.yml  neets_job.yml  trangboddhet_job.yml  trigger_jobs.yml  utdanning_job.yml
scripts/: create_upload_dirs.sh  upload_input.sh
src/bydelsfakta/: aggregate.py  geography.py  io.py  output.py  population_utils.py  templates.py  transform.py
src/bydelsfakta/jobs/: alder_distribusjon_status.py  befolkningsutvkl_forv_utvkl.py  boligpriser.py  botid_ikke_vestlige.py  bygningstyper.py  eieform.py  fattige_barnehusholdninger.py  flyttehyppighet_totalt.py  folkemengde.py  husholdning_med_barn.py  husholdningstyper.py  innvandrer_befolkning.py  innvandring_under16.py  kommunale_boliger.py  landbakgrunn_innvandringsgrupper.py  levekaar_dodsrate.py  levekar_ikke_sysselsatte.py  levekar_lav_utdanning.py  levekar_redusert_funksjonsevne.py  levekar_totalt.py  levekar_trangbodde.py  median_totalpris.py  neets.py  (+2 more)
tests/: conftest.py  template_helper.py  test_aggregate.py  test_folkemengde.py  test_geography.py  test_io.py  test_levekar_totalt.py  test_output.py  test_population_utils.py  test_sum_nans.py  test_template_a.py  test_template_b.py  test_template_c.py  test_template_g.py  test_template_k.py  test_transform.py  transform_output_test_data.py
tests/data/: husholdning_test_input.csv  template_k_test_input.csv  transform_output_test_input.csv
(+3 files in other folders)
